--- a/index.html
+++ b/index.html
@@ -22,21 +22,25 @@
         <div class="page-header container">
             <nav class="navigation">
              <a href="./index.html" class="logotype">Lloyd<span class="span-logotype">Jefersson.</span></a>
+             <ul class="menu-list">
+                <li class="menu-item"><a href="">About me</a></li>
+                <li class="menu-item"><a href="">Projects</a></li>
+                <li class="menu-item"><a href="">Contacts</a></li>
+             </ul>
          </nav>
          <button type="button" class="open-mobile-menu">
              <svg class="burger-icon" width="32" height="32">
-                 <use href="./img/sprite.svg#icon-toggle-btn-light"></use>
+                 <use href="./img/sprite.svg#icon-burger"></use>
              </svg>
          </button>
         </div>
-        <div class="mobile-menu">
+        <div class="mobile-menu ">
                 <a href="" class="logotype logo-mob-menu">Lloyd<span class="span-logotype">Jefersson.</span></a>
-                <button class="close-btn-menu">
-                    <svg class="cls-menu-icon" width="32" height="32">
-                        <use href=""></use>
+                <button type="button" class="close-btn-menu">
+                    <svg class="close-menu-icon" width="32" height="32">
+                        <use href="./img/sprite.svg#icon-x"></use>
                     </svg>
-                </button>
-                <div class="container-menu">
+                </button>        
                     <ul class="mob-menu-list">
                         <li>
                             <a href="" class="mob-menu-link">About me</a>
@@ -48,7 +52,6 @@
                             <a href="" class="mob-menu-link">Contacts</a>
                         </li>
                     </ul>
-                </div>
         </div>
     </header>
     <script type="module" src="./js/header-mobile.js"></script>
