--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <nav class="navigation">
              <a href="./index.html" class="logotype">Lloyd<span class="span-logotype">Jefersson.</span></a>
              <ul class="menu-list">
-                <li class="menu-item"><a href="">About me</a></li>
-                <li class="menu-item"><a href="">Projects</a></li>
-                <li class="menu-item"><a href="">Contacts</a></li>
+                <li class="menu-item"><a class="menu-link" href="">About me</a></li>
+                <li class="menu-item"><a class="menu-link" href="">Projects</a></li>
+                <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
              </ul>
          </nav>
          <button type="button" class="open-mobile-menu">
